--- a/style.css
+++ b/style.css
@@ -2,6 +2,29 @@
   margin: 0;
   padding: 0;
   font-family: "inter", sans-serif;
+  box-sizing: border-box;
+  
+}
+:root{
+  --text-color: white;
+  --bg-url:url("assets/assets/bg-mobile.jpg");
+  --stroke-color:rgba(255, 255, 255, 0.5);
+  --surface-color:rgba(255, 255, 255, 0.1);
+  --surface-color-hover: rgba(255, 255, 255, 0.05);
+  --highlight-color: rgba(255, 255, 255, 0.2);
+  --switch-bg-url: url(./assets/assets/moon-stars.svg);
+  
+
+}
+.light{
+  --text-color: black;
+  --bg-url:url("assets/assets/bg-mobile-light.jpg");
+  --stroke-color:rgba(0, 0, 0, 0.5);
+  --surface-color:rgba(0, 0, 0, 0.05);
+  --surface-color-hover:rgba(0, 0, 0, 0.02)
+  --highlight-color: rgba(0, 0, 0, 0.1);
+  --switch-bg-url: url(./assets/assets/sun.svg);
+  
 }
 
 body {
@@ -9,14 +32,19 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover; */
-  background: url("assets/assets/bg-mobile.jpg") no-repeat top center/cover;
-  color: rgb(255, 255, 255);
+  background: var(--bg-url) no-repeat top center/cover;
 }
+body *{
+  color: var(--text-color)
+
+}
+/* container */
 #container {
   width: 360px;
   margin: auto;
-  border: solid red;
+  padding: 0 24px 25px;
 }
+/* profile */
 #profile {
   text-align: center;
   padding: 24px;
@@ -32,31 +60,93 @@ body {
   margin: 8px 0 0 0;
 }
 #profile p a {
-  color: white;
   text-decoration: none;
 }
 #profile p a:hover {
   color: rgba(132, 53, 172, 0.852);
 }
+/* switch */
+#switch{
+  position: relative;
+  width: 64px;
+  margin: 4px auto;
+}
+#switch button{
+  width: 32px;
+  height: 32px;
+  background: white var(--switch-bg-url) no-repeat center;
+  border: 1px solid var(--stroke-color);
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  z-index: 1;
+  transform: translateY(-50%);
+}
+.light #switch button{
+  right: 0;
+  left: initial;
+}
+#switch span{
+  display: block;
+  width: 64px;
+  height: 24px;
+  background: var(--surface-color);
+  border: 1px solid var(--stroke-color);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 9999px;
+}
+/* lista */
 #lista {
   text-align: center;
   font-weight: 500;
 }
 #lista ul {
   list-style: none;
+  flex-direction: column;
+  display: flex;
+  gap: 16px;
+  padding: 24px 0;
 }
-#lista ul li {
-  margin: 20px 0 0 0;
-  border: solid white 2px;
-  border-radius: 10px;
-  padding: 16px;
-  margin: 16px 24px;
-}
-#lista ul a {
-  color: white;
+#lista ul li a {
+  border: 1px solid var(--stroke-color);
+  border-radius: 8px;
   text-decoration: none;
+  display: flex;
+  justify-content: center;
+  padding: 16px 24px;
+  background: var(--surface-color);
+  backdrop-filter: blur(4px);
+  font-weight: 500;
+  transition: all 0.5ms;
 }
-#lista ul a li:hover {
-  background-color: rgba(229, 229, 242, 0.169);
-  transition: 0.5s;
+#lista ul li a:hover {
+  background: var(--surface-color-hover);
+  border: 1.5px solid var(--text-color);
 }
+#social-links{
+  display: flex;
+  padding: 24px;
+  font-size: 24px;
+  justify-content:center;
+}
+#social-links a{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+  border-radius: 50%;
+  transition: background 0.2s;
+}
+#social-links a:hover{
+  background: var(--highlight-color);
+  
+}
+footer{
+  text-align: center;
+  padding: 24px 0;
+  font-size: 14px;
+}
+
+
