--- a/style.css
+++ b/style.css
@@ -1,152 +1,157 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "inter", sans-serif;
+*{
+  padding: 0px;
+  margin: 0px;
   box-sizing: border-box;
-  
 }
 :root{
-  --text-color: white;
-  --bg-url:url("assets/assets/bg-mobile.jpg");
-  --stroke-color:rgba(255, 255, 255, 0.5);
-  --surface-color:rgba(255, 255, 255, 0.1);
-  --surface-color-hover: rgba(255, 255, 255, 0.05);
-  --highlight-color: rgba(255, 255, 255, 0.2);
-  --switch-bg-url: url(./assets/assets/moon-stars.svg);
-  
-
+--text-color: rgb(255, 255, 255);
+--bg-url: url(./assets/assets/bg-mobile.jpg);
+--border-link:rgba(255, 255, 255, 0.346);
+--hover-border:white;
+--hover-social:rgba(255, 255, 255, 0.2);
+--switch-bg-url:url(./assets/assets/moon-stars.svg)
 }
 .light{
   --text-color: black;
-  --bg-url:url("assets/assets/bg-mobile-light.jpg");
-  --stroke-color:rgba(0, 0, 0, 0.5);
-  --surface-color:rgba(0, 0, 0, 0.05);
-  --surface-color-hover:rgba(0, 0, 0, 0.02)
-  --highlight-color: rgba(0, 0, 0, 0.1);
-  --switch-bg-url: url(./assets/assets/sun.svg);
+  --bg-url: url(./assets/assets/bg-mobile-light.jpg);
+  --border-link:rgba(0, 0, 0, 0.5);
+  --hover-border:rgba(0, 0, 0, 0.307);
+  --hover-social:rgba(0, 0, 0, 0.5);
+  --switch-bg-url:url(./assets/assets/sun.svg)
+}
+body{
+  background: var(--bg-url) no-repeat top center/cover ;
+}
+
+body *{
+  color: white;
+  font-family: 'Inter', sans-serif;
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+#container{  
+  width: 360px;
+  height: 712px;
+  margin: auto;
+  padding-top:56px;
+}
+
+#profile{
+  padding: 24px;
+  text-align: center;
   
 }
 
-body {
-  /* background-image: url("assets/assets/bg-mobile.jpg");
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover; */
-  background: var(--bg-url) no-repeat top center/cover;
+#profile img{
+  width:112px ;
 }
-body *{
-  color: var(--text-color)
 
-}
-/* container */
-#container {
-  width: 360px;
-  margin: auto;
-  padding: 0 24px 25px;
-}
-/* profile */
-#profile {
-  text-align: center;
-  padding: 24px;
-  margin-top: 56px;
-}
-#profile img {
-  width: 112px;
-}
-#profile p {
-  font-weight: 500;
-  font-size: 16px;
+#profile p{
+  margin-top: 8px;
+  font-weight: bold;
   line-height: 24px;
-  margin: 8px 0 0 0;
 }
-#profile p a {
-  text-decoration: none;
+
+#profile p a:hover{ 
+  color: aqua;
 }
-#profile p a:hover {
-  color: rgba(132, 53, 172, 0.852);
-}
-/* switch */
+
 #switch{
   position: relative;
   width: 64px;
   margin: 4px auto;
 }
+
 #switch button{
   width: 32px;
   height: 32px;
-  background: white var(--switch-bg-url) no-repeat center;
-  border: 1px solid var(--stroke-color);
+  border: 0;
   border-radius: 50%;
+  background: var(--switch-bg-url) no-repeat white center;
+
   position: absolute;
   top: 50%;
-  left: 0;
   z-index: 1;
   transform: translateY(-50%);
 }
+
 .light #switch button{
   right: 0;
   left: initial;
 }
+
 #switch span{
   display: block;
   width: 64px;
   height: 24px;
-  background: var(--surface-color);
-  border: 1px solid var(--stroke-color);
+  background: var(--hover-social);
+  border: 1px solid var(--border-link);
   backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
   border-radius: 9999px;
 }
-/* lista */
-#lista {
-  text-align: center;
-  font-weight: 500;
-}
-#lista ul {
-  list-style: none;
-  flex-direction: column;
-  display: flex;
-  gap: 16px;
-  padding: 24px 0;
-}
-#lista ul li a {
-  border: 1px solid var(--stroke-color);
-  border-radius: 8px;
-  text-decoration: none;
+
+#lista{
+  padding: 24px;
   display: flex;
   justify-content: center;
-  padding: 16px 24px;
-  background: var(--surface-color);
+  display: inline;
+}
+
+#lista ul{
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+#lista ul li a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: solid 1px var(--border-link);
+  border-radius: 8px ;
+  padding:16px 24px ;
   backdrop-filter: blur(4px);
   font-weight: 500;
-  transition: all 0.5ms;
+  transition: background 0.2s;
 }
-#lista ul li a:hover {
-  background: var(--surface-color-hover);
-  border: 1.5px solid var(--text-color);
+
+#lista ul li a:hover{
+  background: rgba(255, 255, 255, 0.05);
+  border: solid 1.5px var(--hover-border);
 }
+
 #social-links{
   display: flex;
-  padding: 24px;
+  justify-content: center;
+  padding: 24px 0;
   font-size: 24px;
-  justify-content:center;
 }
+
 #social-links a{
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 16px;
+}
+
+#social-links a:hover{
+  background-color: var(--hover-social);
   border-radius: 50%;
   transition: background 0.2s;
 }
-#social-links a:hover{
-  background: var(--highlight-color);
-  
-}
+
 footer{
-  text-align: center;
-  padding: 24px 0;
   font-size: 14px;
+  text-align: center;
+  padding: 24px 24px 49px 24px;
 }
+
+footer a{
+  text-decoration: underline;
+}
+
 
 
